--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,83 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
+.page {
+  display: grid;
+  grid-template:
+    'title' 100px
+    'search' 300px
+    'articles' auto
+    'pagination' 100px
+    / auto;
+  gap: 2vw;
+  margin: 0;
+  width: 100%;
+  height: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #222;
+  background-image: url('./images/cartographer.png');
+  background-repeat: repeat, no-repeat;
+  background-attachment: fixed;
+  animation: page-bg-animation 16s linear infinite forwards;
+  font-family: 'Roboto', sans-serif;
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes page-bg-animation {
   from {
-    transform: rotate(0deg);
+    background-position: 0 0;
   }
+
   to {
-    transform: rotate(360deg);
+    background-position: 500px 499px, 0 0;
+  }
+}
+
+.page__title {
+  grid-area: title;
+  margin: 100px auto 0;
+  font-size: 50px;
+}
+
+.page__search {
+  grid-area: search;
+  width: 50%;
+  height: 15%;
+  margin: auto;
+}
+
+.page__articles {
+  grid-area: articles;
+  width: 50%;
+  margin: auto;
+}
+
+@media screen and (max-width: 1080px) {
+  .page {
+    grid-template:
+      'title' 100px
+      'search' 100px
+      'settings' auto
+      'articles' auto
+      'pagination' 100px
+      / auto;
+  }
+
+  .page__title {
+    margin: auto;
+  }
+
+  .page__search {
+    grid-area: search;
+    width: 100%;
+    height: 40px;
+  }
+
+  .page__articles {
+    grid-area: articles;
+    width: 100%;
+  }
+
+  .page__settings {
+    position: initial;
+    grid-area: settings;
+    margin: 22px;
   }
 }
